2017-05-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version again

2017-05-05  Kirill Müller <krlmlr@mailbox.org>

        * inst/include/Rcpp/date_datetime/Date.h: Suppress -Wconversion warnings
        * inst/include/Rcpp/date_datetime/Datetime.h: Idem
        * inst/include/Rcpp/date_datetime/newDateVector.h: Idem
        * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Idem
        * inst/include/Rcpp/sugar/functions/rowSums.h: Idem
        * inst/include/Rcpp/sugar/functions/sample.h: Idem
        * inst/include/Rcpp/sugar/functions/strings/trimws.h: Idem

2017-04-26  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/exceptions.h (string_to_try_error): Protect result
        from Rf_mkString

2017-04-25  Dirk Eddelbuettel  <edd@debian.org>

        * R/Attributes.R (.plugins[["cpp11"]]): If R 3.4.0 or newer is used, set
        USE_CXX11 (instead of the older USE_CXX1X);
        (.plugins[["cpp14"]]): similarly updated for C++14
        (.plugins[["cpp17"]]): similarly updated for C++17
        (.plugins[["cpp98"]]): added

2017-04-22  Nathan Russell  <russell.nr2012@gmail.com>

        * inst/include/Rcpp/sugar/functions/strings/trimws.h: Added sugar
        function trimws with unit tests
        * inst/include/Rcpp/sugar/functions/strings/strings.h: Idem
        * inst/unitTests/cpp/sugar.cpp: Idem
        * inst/unitTests/runit.sugar.R: Idem

2017-04-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

        * inst/include/Rcpp/exceptions/cpp98/exceptions.h
        (RCPP_ADVANCED_EXCEPTION_CLASS): Suppressing some warnings

2017-04-20  James J Balamuta  <balamut2@illinois.edu>

        * inst/include/Rcpp/api/meat/DottedPairImpl.h: Corrected format
        specifier from '%s' to '%i'.

2017-04-18  James J Balamuta  <balamut2@illinois.edu>
